# pg-ripple

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEEP_ANALYSIS_PROMPT.md  Dockerfile  README.md  RELEASE.md  ROADMAP.md  audit.toml  build.rs  build_output.txt  cargo_check_output.txt  check_test_output.sh  clippy_all.txt  clippy_output.txt  deny.toml  docker-compose.yml  gemini-design-critique.md  justfile  pg_ripple.cdx.json  pg_ripple.control  renovate.json  roadmap-description.md  rust-toolchain.toml  sbom.json  sbom_diff.md
.cargo/: audit.toml  config.toml
.devin/: wiki.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: bidi_relay_throughput.sql  bidiops_throughput.sql  ci_benchmark.sh  confidence_join_scale.sql  datalog_agg.sql  hybrid_search.sql  insert_throughput.sql  magic_sets.sql  merge_throughput.sql  merge_throughput_baselines.json  merge_throughput_history.csv  probabilistic_overhead.sql  shacl_async_load.sql  vector_index_compare.sql  wcoj.sql
blog/: README.md  builtin-reasoning-rules-explained.md  cdc-knowledge-graphs.md  citus-shard-pruning-sparql.md  construct-views-live-transformations.md  datalog-inside-postgresql.md  dictionary-encoding-integer-joins.md  explain-sparql-query-plans.md  gdpr-right-to-erasure.md  geosparql-postgis-spatial.md  graphrag-knowledge-export.md  htap-reads-and-writes.md  ivm-pg-trickle-integration.md  json-ld-framing-nested-json.md  leapfrog-triejoin.md  magic-sets-goal-directed.md  multi-tenant-knowledge-graphs.md  natural-language-to-sparql.md  neuro-symbolic-entity-resolution.md  ontology-mapping-alignment.md  owl-sameas-entity-resolution.md  probabilistic-datalog.md  property-paths-recursive-ctes.md  provenance-tracking-prov-o.md  r2rml-relational-to-graph.md  rdf-star-statements-about-statements.md  semantic-hub-trickle-relay.md  shacl-data-quality.md  sparql-federation-local-remote.md  sparql-to-sql-translation.md  temporal-time-travel-queries.md  vector-sparql-hybrid-search.md  vertical-partitioning-explained.md  well-founded-semantics.md  why-rdf-in-postgresql.md
clients/dbt-pg-ripple/: README.md  pyproject.toml
clients/dbt-pg-ripple/src/dbt_pg_ripple/: __init__.py  adapter.py
clients/dbt-pg-ripple/tests/: test_adapter.py
docker/: 00-pg_hba.sh  01-init.sql  02-examples.sh  Dockerfile.batteries  Dockerfile.cnpg
docs/: book.toml
examples/: cdc_subscription.sql  citus_rebalance_with_trickle.sql  cloudnativepg_cluster.yaml  federation_multi_endpoint.sql  graphrag_byog.sql  graphrag_round_trip.sql  hybrid_vector_search.sql  llm_workflow.sql  (+9 more)
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/llm_prompt_builder/: regression_nested_marker_bypass  regression_unicode_lookalike_bypass  regression_unicode_offset_bypass
fuzz/corpus/sparql_update/: add.sparql  clear_graph.sparql  copy.sparql  delete_data.sparql  delete_where.sparql  drop_graph.sparql  insert_data.sparql  insert_where.sparql  move.sparql
fuzz/corpus/url_host_parser/: crash-beb0d0c3217bbba0f15343acd5fa60ef4cedc2b4
fuzz/fuzz_targets/: construct_rule.rs  datalog_parser.rs  dictionary_hash.rs  federation_result.rs  geosparql_wkt.rs  http_request.rs  jsonld_framer.rs  llm_prompt_builder.rs  nquads_load.rs  ntriples_load.rs  r2rml_mapping.rs  rdfxml_parser.rs  shacl_parser.rs  shacl_sparql.rs  sparql_parser.rs  sparql_update.rs  trig_load.rs  turtle_parser.rs  url_host_parser.rs
(+1425 files in other folders)
