[package]
name = "pg_ripple-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
spargebra = { version = "0.4", features = ["sparql-12"] }
rio_turtle = "0.8"
rio_xml = "0.8"
rio_api = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde_json = "1"
url = "2"

[[bin]]
name = "federation_result"
path = "fuzz_targets/federation_result.rs"
test = false
doc = false

[[bin]]
name = "sparql_parser"
path = "fuzz_targets/sparql_parser.rs"
test = false
doc = false

[[bin]]
name = "turtle_parser"
path = "fuzz_targets/turtle_parser.rs"
test = false
doc = false

[[bin]]
name = "datalog_parser"
path = "fuzz_targets/datalog_parser.rs"
test = false
doc = false

[[bin]]
name = "shacl_parser"
path = "fuzz_targets/shacl_parser.rs"
test = false
doc = false

[[bin]]
name = "dictionary_hash"
path = "fuzz_targets/dictionary_hash.rs"
test = false
doc = false

# v0.53.0 — new fuzz targets
[[bin]]
name = "rdfxml_parser"
path = "fuzz_targets/rdfxml_parser.rs"
test = false
doc = false

[[bin]]
name = "jsonld_framer"
path = "fuzz_targets/jsonld_framer.rs"
test = false
doc = false

[[bin]]
name = "http_request"
path = "fuzz_targets/http_request.rs"
test = false
doc = false

# v0.60.0 A7-1 — new fuzz targets: GeoSPARQL WKT, R2RML, LLM prompt sanitizer
[[bin]]
name = "geosparql_wkt"
path = "fuzz_targets/geosparql_wkt.rs"
test = false
doc = false

[[bin]]
name = "r2rml_mapping"
path = "fuzz_targets/r2rml_mapping.rs"
test = false
doc = false

[[bin]]
name = "llm_prompt_builder"
path = "fuzz_targets/llm_prompt_builder.rs"
test = false
doc = false
