[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dbt-pg-ripple"
version = "0.61.0"
description = "A dbt adapter for pg_ripple — the PostgreSQL RDF triple store with native SPARQL"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "dbt-postgres>=1.5.0",
    "dbt-core>=1.5.0",
]
keywords = ["dbt", "rdf", "sparql", "postgresql", "knowledge-graph"]

[project.urls]
Homepage = "https://github.com/pg-ripple/pg-ripple2"
Repository = "https://github.com/pg-ripple/pg-ripple2"
Documentation = "https://pg-ripple.io/docs"

[tool.setuptools.packages.find]
where = ["src"]
